Ajustes finais na segurança e gerenciamento de arquivos